Corrected the name of the button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="form">
           <h3>Find out more</h3>
           <input type="text" name="name" value="name@email.com">
-          <input type="button" name="Download Itinerary">
+          <input type="button" value="Download Itinerary">
         </div>
       </div>
     </aside>
@@ -81,7 +81,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="copyright">
       <p>Copyright 2019 | Unplugged</p>
     </div>
