--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
   </header>
 
 
+
+
   <main>
     <section class="hero-area">
       <div class="content-wrapper">
@@ -59,7 +61,54 @@
         </div>
       </div>
     </aside>
-  </main>
+
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        <div class="features-items"> 
+        <article>
+          <p class="fontawesone-icon"></p>
+          <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        </article>
+        <article>
+          <p class="fontawesone-icon"></p>
+          <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+        </article>
+        <article>
+          <p class="fontawesone-icon"></p>
+          <p class="features-item-description">Private chef team providing on demand meals - just like your team kichen.</p>
+        </article>
+        <article>
+          <p class="fontawesone-icon"></p>
+          <p class="features-item-description">5 outdoor obstacle courses, including private beach &#189 mile from bungalow.</p>
+        </article>
+        <article>
+          <p class="fontawesone-icon"></p>
+          <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+        </article>
+        <article>
+          <p class="fontawesone-icon"></p>
+          <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+        </article>
+      </div>
+    </div>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
+        <article>
+          <div>
+            <img src="" alt="team image">
+            <h3>LaCrue Bottling Co. October 2021</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incicidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla partiatur.</p>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
+</main>
 
   <footer>
     <div class="content-wrapper">
@@ -83,7 +132,7 @@
     </div>
 
     <div class="copyright">
-      <p>Copyright 2019 | Unplugged</p>
+      <p>Copyright 2021 | Unplugged</p>
     </div>
   </footer>
 
