Coded About page and added Home page after Validation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 
 <body>
+
   <header>
     <div class="content-wrapper">
       <a href="#">
@@ -31,7 +32,8 @@
       </a>
       <div class="header-divider"></div>
       <nav>
-        <ul><li><a href="faq/index.html" target="_blank">FAQ</a></li>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
           <li><a href="about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
@@ -42,6 +44,7 @@
 
 
   <main>
+
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
@@ -80,7 +83,7 @@
         </article>
         <article>
           <p class="fontawesone-icon"></p>
-          <p class="features-item-description">5 outdoor obstacle courses, including private beach &#189 mile from bungalow.</p>
+          <p class="features-item-description">5 outdoor obstacle courses, including private beach &#189; mile from bungalow.</p>
         </article>
         <article>
           <p class="fontawesone-icon"></p>
@@ -94,6 +97,7 @@
     </div>
     </section>
 
+
     <section class="reviews">
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like these.</h2>
@@ -101,14 +105,16 @@
           <div>
             <img src="" alt="team image">
             <h3>LaCrue Bottling Co. October 2021</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incicidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla partiatur.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incicidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla partiatur.
+            </p>
           </div>
         </article>
       </div>
-    </div>
-  </section>
+    </section>
 
 </main>
+
 
   <footer>
     <div class="content-wrapper">
@@ -124,8 +130,8 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p><a href="https://www.facebook.com/" target="_blank"></a></p>
-            <p><a href="https://twitter.com/?lang=en-gb" target="_blank"></p>
-              <p><a href="https://www.instagram.com/" target="_blank"></p>
+            <p><a href="https://twitter.com/?lang=en-gb" target="_blank"></a></p>
+              <p><a href="https://www.instagram.com/" target="_blank"></a></p>
           </div>
         </div>
       </div>
