--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="..faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
           <li><a href="index.html">About</a></li>
         </ul>
       </nav>
@@ -79,10 +79,10 @@
               facilitator@unplugged.com
             </p>
           </div>
-        </address>
-      </div>
+        </address> <!-- contact-content div ends -->
+      </div> <!-- contact content wrapper ends -->
     </section>
-  </main>
+  </main> <!-- main wrapper-->
 
 
   <footer>
