--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
   <header>
     <div class="content-wrapper">
-      <figure>
-        <a href="#"><img src="" alt="unplugged logo"></a>
-      </figure>
+        <a href="#">
+          <img src="" alt="unplugged logo">
+        </a>
+      
 
       <div class="header-divider"></div>
       <nav>
