--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -27,9 +30,11 @@
 
   <header>
     <div class="content-wrapper">
+      <figure>
         <a href="#">
           <img src="" alt="unplugged logo">
         </a>
+      </figure>
       
 
       <div class="header-divider"></div>
