--- a/index.html
+++ b/index.html
@@ -5,22 +5,15 @@
   <meta charset="utf-8">
   <title>Unplugged Retreat</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -69,7 +62,7 @@
           <input type="text" name="name" value="name@email.com">
           <input type="button" value="Download Itinerary">
         </div>
-      </div>
+      </div> <!--- aside content wrapper ends --->
     </aside>
 
     <section class="features">
@@ -120,7 +113,7 @@
       </div>
     </section>
 
-</main>
+</main> <!--- main wrapper --->
 
 
   <footer>
@@ -141,8 +134,9 @@
               <p><a href="https://www.instagram.com/" target="_blank"></a></p>
           </div>
         </div>
-      </div>
+      </div> <!--- footer content ends --->
     </div>
+    <!---footer content-wrapper ends--->
 
     <div class="copyright">
       <p>Copyright 2021 | Unplugged</p>
