--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="content-wrapper">
       <figure>
         <a href="#">
-          <img src="" alt="unplugged logo">
+          <img src="img/unplugged-logo-img.png" alt="unplugged logo">
         </a>
       </figure>
       
