--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
 
     <section class="reviews">
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like these.</h2>
+        <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+          <figure>
+            <img src="img/group-reviews-img.jpg" alt="team image">
+          </figure>
           <div>
-            <img src="" alt="team image">
             <h3>LaCrue Bottling Co. October 2021</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incicidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla partiatur.
