--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat | About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,7 +29,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#">
+        <a href="../index.html">
           <img src="../img/unplugged-logo-img.png" alt="unplugged logo">
         </a>
       </figure>
