--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></p>
+            <p><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></p>
             <p><a href="https://twitter.com/?lang=en-gb" target="_blank"><i class="fab fa-twitter"></i></a></p>
               <p><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></p>
           </div>
