--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#">
+        <a href="index.html">
           <img src="img/unplugged-logo-img.png" alt="unplugged logo">
         </a>
       </figure>
