--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <p class="fontawesone-icon">
             <i class="fas fa-utensils"></i>
           </p>
-          <p class="features-item-description">Private chef team providing on demand meals - just like your team kichen.</p>
+          <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
         </article>
         <article>
           <p class="fontawesone-icon">
